--- a/web_project1/web_project/src/styles/Encabezado.css
+++ b/web_project1/web_project/src/styles/Encabezado.css
@@ -8,13 +8,15 @@
   padding: 0;
 }
 
-
 .nav {
   margin: 0;
   padding: 20px;
   color: black;
   font-size: 20px;
   font-weight: bold;
+  justify-content: space-between;
+  display: flex;
+  align-items: center;
 }
 
 .nav-list {
@@ -23,7 +25,15 @@
   list-style: none;
   display: flex; 
   gap: 20px;
-  justify-content: center;;
+  justify-content: center;
+  align-items: center;
+}
+
+.nav-center{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
 }
 
 .nav-list li {
@@ -38,4 +48,16 @@ nav a{
 }
 nav a:hover{
   color: black;
+}
+
+.logo{
+  width: 100px;
+  height: 100px;
+}
+
+.user-logo {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin-left: auto;
 }
