--- a/web_project1/web_project/src/styles/Cards.css
+++ b/web_project1/web_project/src/styles/Cards.css
@@ -64,3 +64,15 @@
   font-size: 1rem;
   line-height: 1.6;
 }
+
+.more-info-button {
+  background-color: #3E3F29;
+  color: #FAF9EE;
+  border: none;
+  padding: 0.5rem 1rem;
+  border-radius: 8px;
+  cursor: pointer;
+  font-size: 1rem;
+  margin-bottom: 1.5rem;
+  margin: 2rem;
+}
