--- a/web_project1/web_project/src/styles/Form.css
+++ b/web_project1/web_project/src/styles/Form.css
@@ -4,11 +4,11 @@
     align-items: center;
     justify-content: center;
     padding: 2rem;
-    background-color: #F1F0E4;
+    background-color: var(--bg-primary);
 }
 
 .succes-message{
-    color: #3E3F29;
+    color: var(--button-bg);
     justify-content: center;
     font-size: 1.2rem;
     margin: 1rem;
@@ -20,7 +20,7 @@
     max-width: 400px;
     padding: 0.75rem;
     margin-bottom: 1rem;
-    border: 1px solid #ccc;
+    border: 1px solid var(--border-color);
     border-radius: 8px;
     font-size: 1rem;
 }
@@ -34,14 +34,14 @@
 }
 
 form h2{
-    color: #3E3F29;
+    color: var(--button-bg);
     font-size: 34px;
     margin-bottom: 1rem;
 }
 
 form button{
-    background-color: #3E3F29;
-    color: #FAF9EE;
+    background-color: var(--button-bg);
+    color: var(--bg-card);
     border: none;
     padding: 0.75rem 1.5rem;
     border-radius: 8px;
@@ -50,5 +50,5 @@ form button{
 }
 
 form button:hover {
-    background-color: #4e4e3a;
+    background-color: var(--button-hover);
 }
