--- a/web_project1/web_project/src/styles/Home.css
+++ b/web_project1/web_project/src/styles/Home.css
@@ -5,7 +5,15 @@
   transition: background-color 0.3s ease;
 }
 
-h1 {
+h1{
+  font-size: 60px;
+  font-family: sans-serif;
+  color: var(--text-contrast);
+  transition: color 0.3s ease;
+  margin-bottom: 20px;
+}
+
+h2 {
   font-size: 50px;
   font-family: sans-serif;
   color: var(--text-contrast);
